# graph-indexed-development

./: .gitignore  Cargo.toml  DESIGN-ritual-v2.md  DESIGN.md  ISSUES.md  LICENSE  README.md  RITUAL_RUN_IMPLEMENTATION.md  graph-indexed-development.tex  package-lock.json  package.json  references.bib
.gid/: README.md  config.yml  graph.yml
.gid/docs/: issues-index.md
.gid/features/code-intel/: requirements.md
.gid/features/core/: requirements.md
.gid/features/frictionless-graph/: design.md
.gid/features/gidterm-integration/: requirements.md
.gid/features/harness/: requirements.md
.gid/features/incremental-extract/: DESIGN-review.md  DESIGN.md
.gid/features/infer/: requirements-master.md  requirements.md
.gid/features/infer-clustering/: design.md  requirements.md
.gid/features/infer-integration/: design.md  requirements.md
.gid/features/infer-labeling/: design.md  requirements.md
.gid/features/mcp-server/: requirements.md
.gid/features/ritual-cli-run/: requirements.md
.gid/features/ritual-engine/: requirements.md
.gid/history/: 2026-03-25T21-17-29Z.yml
.gid/issues/: ISS-006-id-collision-split-mega.md  ISS-007-colocation-hardcoded-threshold.md  ISS-008-max-cluster-size-formula.md  ISS-009-co-citation-edges.md  ISS-010-symbol-similarity-edges.md
.gid/reviews/: APPLIED_CHANGES_R3.md  frictionless-graph-design-r3-review.md  frictionless-graph-design-review-r2.md  frictionless-graph-design-review.md
.gid/rituals/: r-559511.json  r-8ec4cf.json  r-a131b6.json  r-bed29b.json
crates/gid-cli/: Cargo.toml
crates/gid-core/: Cargo.toml
crates/gid-core/.gid/: execution-log.jsonl
crates/gid-core/src/: advise.rs  code_graph.rs  design.rs  graph.rs  history.rs  lib.rs  lsp_client.rs  lsp_daemon.rs  parser.rs  query.rs  slugify.rs  task_graph_knowledge.rs  unified.rs  unify.rs  validator.rs  visual.rs  watch.rs  working_mem.rs
crates/gid-core/src/code_graph/: analysis.rs  build.rs  extract.rs  format.rs  mod.rs  query.rs  tests.rs  types.rs
crates/gid-core/src/code_graph/lang/: markdown.rs  rust_lang.rs  typescript.rs
crates/gid-core/src/harness/: context.rs  execution_state.rs  executor.rs  mod.rs  notifier.rs  replanner.rs  scheduler.rs  telemetry.rs  topology.rs  types.rs
crates/gid-core/src/infer/: clustering.rs  integration.rs  labeling.rs  mod.rs
crates/gid-core/src/ritual/: api_llm_client.rs  composer.rs  definition.rs  engine.rs  executor.rs  llm.rs  mod.rs  notifier.rs  scope.rs  state_machine.rs  template.rs  v2_executor.rs
crates/gid-core/src/storage/: integration_tests.rs  migration.rs  mod.rs  sqlite.rs
crates/gid-core/tests/: infer_integration_test.rs  phase_executor_test.rs
crates/gid-harness/: Cargo.toml
(+14 files in other folders)
