[package]
name = "gid-core"
version = "0.2.0"
edition = "2021"
description = "Graph-Indexed Development core library — graph-based project management and code analysis for AI agents"
license = "MIT"
repository = "https://github.com/tonitangpotato/graph-indexed-development"
keywords = ["graph", "development", "ai", "agent", "code-analysis"]
categories = ["development-tools", "data-structures"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
walkdir = { workspace = true }
tracing = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-javascript = { workspace = true }

[dev-dependencies]
tempfile = "3"
